Fix align left no longer working.

--- a/extension/scripts/features/align-left/ttAlignLeft.css
+++ b/extension/scripts/features/align-left/ttAlignLeft.css
@@ -1,5 +1,6 @@
 .tt-align-left .container {
 	margin-left: 20px !important;
+	justify-content: flex-start !important;
 }
 
 .tt-align-left.tt-popout .content-wrapper[role="main"] {
